Quite el redireccionamiento de las imagenes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <form autocomplete="off">
                 <div>
                     <input type="search" name="q" placeholder="Buscar">
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <a><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
             <a href="index.html" class="enlace">
@@ -99,7 +99,7 @@
                 <div class="categoria"> <!--card-->
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <!--image-content--><a href='https://postimg.cc/BjxsKD9Z' target='_blank'><img src='https://i.postimg.cc/52rtDqsz/audifonos.png' alt='audifonos' class="imgCategoria" width="90%" loading="lazy"></a>
+                        <!--image-content--><a><img src='https://i.postimg.cc/52rtDqsz/audifonos.png' alt='audifonos' class="imgCategoria" width="90%" loading="lazy"></a>
                         <!--card-image-->
                         <!--card content-->
                     </figure>
@@ -108,7 +108,7 @@
                 <div class="categoria">
                     <figure>
                         <!--Imagen alojada en URL externa-->                       
-                        <a href='https://postimg.cc/6ycf5bTB' target='_blank'><img
+                        <a><img
                                 src='https://i.postimg.cc/13hCBLQV/iphone.png' alt='iphone'
                                 class="imgCategoria" width="90%" loading="lazy"></a>
                     </figure>
@@ -117,7 +117,7 @@
                 <div class="categoria">
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/rdwrZq94' target='_blank'><img
+                        <a><img
                                 src='https://i.postimg.cc/d08j11k5/mac.png' alt='mac'
                                 class="imgCategoria" width="90%" loading="lazy"></a>
                     </figure>
@@ -128,7 +128,7 @@
                 <div class="categoria"> <!--card-->
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <!--image-content--><a href='https://postimg.cc/BjxsKD9Z' target='_blank'><img src='https://i.postimg.cc/52rtDqsz/audifonos.png' alt='audifonos' class="imgCategoria" width="90%" loading="lazy"></a>
+                        <!--image-content--><a><img src='https://i.postimg.cc/52rtDqsz/audifonos.png' alt='audifonos' class="imgCategoria" width="90%" loading="lazy"></a>
                         <!--card-image-->
                         <!--card content-->
                     </figure>
@@ -137,7 +137,7 @@
                 <div class="categoria">
                     <figure>
                         <!--Imagen alojada en URL externa-->                   
-                        <a href='https://postimg.cc/6ycf5bTB' target='_blank'><img
+                        <a><img
                                 src='https://i.postimg.cc/13hCBLQV/iphone.png' alt='iphone'
                                 class="imgCategoria" width="90%" loading="lazy"></a>
                     </figure>
@@ -146,7 +146,7 @@
                 <div class="categoria">
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/rdwrZq94' target='_blank'><img
+                        <a><img
                                 src='https://i.postimg.cc/d08j11k5/mac.png' alt='mac'
                                 class="imgCategoria" width="90%" loading="lazy"></a>
                     </figure>
@@ -167,7 +167,7 @@
                     <div class="descuento">20%</div> 
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/MKHrX6pw/R.png' alt='Laptop' loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/MKHrX6pw/R.png' alt='Laptop' loading="lazy"/></a>
                     </figure>                    
                     <h2>HP Laptop 15-ef1012la</h2>
                     <div class="containerP">
@@ -180,7 +180,7 @@
                     <div class="descuento">30%</div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/Xp8ykMkC' target='_blank'><img src='https://i.postimg.cc/6psLwt7Y/microondas.png' alt='microondas' loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/6psLwt7Y/microondas.png' alt='microondas' loading="lazy"/></a>
                         </figure>                     
                     <h2>Horno microondas LG NeoChef™</h2>
                     <div class="containerP">
@@ -193,7 +193,7 @@
                     <div class="descuento">20%</div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/4nWH0Vb5' target='_blank'><img src='https://i.postimg.cc/DyTQ8cSt/combo-cel.png' alt='combo-cel' loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/DyTQ8cSt/combo-cel.png' alt='combo-cel' loading="lazy"/></a>
                         </figure>                    
                     <h2>Smartphone Xiaomi12Lite</h2>
                     <div class="containerP">
@@ -206,7 +206,7 @@
                     <div class="descuento">10%</div> 
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/ThfH0MCb' target='_blank'><img src='https://i.postimg.cc/MZQ2WzB9/tv.png' alt='tv' loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/MZQ2WzB9/tv.png' alt='tv' loading="lazy"/></a>
                     </figure>                   
                     <h2>Smart tv Samsung 4k</h2>
                     <div class="containerP">
@@ -224,31 +224,31 @@
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/mzSnGBT0' target='_blank'><img src='https://i.postimg.cc/BbWfHnkQ/APPLE.png' alt='APPLE' class="marca1" loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/BbWfHnkQ/APPLE.png' alt='APPLE' class="marca1" loading="lazy"/></a>
                     </figure>                   
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/fSNByFRY' target='_blank'><img src='https://i.postimg.cc/x8k7xVrp/XIAOMI.png' alt='XIAOMI'class="marca1" loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/x8k7xVrp/XIAOMI.png' alt='XIAOMI'class="marca1" loading="lazy"/></a>
                     </figure>                    
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/nCsGZpkN' target='_blank'><img src='https://i.postimg.cc/5Ng7BtF9/LG.png' alt='LG' class="marca3" loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/5Ng7BtF9/LG.png' alt='LG' class="marca3" loading="lazy"/></a>
                     </figure>                   
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/TKs81dMm' target='_blank'><img src='https://i.postimg.cc/VNfz7vK7/HUAWEI.png' alt='HUAWEI'class="marca2" loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/VNfz7vK7/HUAWEI.png' alt='HUAWEI'class="marca2" loading="lazy"/></a>
                     </figure>                    
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/R6M2bNwk' target='_blank'><img src='https://i.postimg.cc/xCHY8m81/SAMSUNG.png' alt='SAMSUNG'class="marca2" loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/xCHY8m81/SAMSUNG.png' alt='SAMSUNG'class="marca2" loading="lazy"/></a>
                     </figure>                    
                 </div>             
         </section>
@@ -277,7 +277,7 @@
             <div class="footer1">
                 <h4>FORMAS DE PAGO</h4>
                 <figure>
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
+                    <a><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
                 </figure>
             </div>
         </div>  
