--- a/pages/pdd.html
+++ b/pages/pdd.html
@@ -34,7 +34,7 @@
             <form autocomplete="off">
                 <div>
                     <input type="text" name="q" placeholder="Buscar">
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <a><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
             <a href="../index.html" class="enlace">           
@@ -134,7 +134,7 @@
             <div class="footer1">
                 <h4>FORMAS DE PAGO</h4>
                 <figure>
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
+                    <a><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
                 </figure>
             </div>
         </div>  
