--- a/pages/somos.html
+++ b/pages/somos.html
@@ -34,7 +34,7 @@
             <form autocomplete="off">
                 <div>
                     <input type="text" name="q" placeholder="Buscar">
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <a><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
             <a href="../index.html" class="enlace">           
@@ -103,21 +103,21 @@
                 <h1>Conoce a nuestro equipo</h1>
                 <div class="contenedorNosotras">
                     <div class="contenedorEquipo">
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/wxJHCFjs/Any-Conv-com-Mesa-de-trabajo-18-copia-4tablas-ingles-1.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-4tablas-ingles-1' class="avatar" loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/wxJHCFjs/Any-Conv-com-Mesa-de-trabajo-18-copia-4tablas-ingles-1.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-4tablas-ingles-1' class="avatar" loading="lazy"/></a>
                         <button class="botonDev">Daniela Camacho</button>
                         <p class="parrafoDevs">                          
                         Nuestra programadora colombiana, es la especialista en la corrección de errores y la optimización del código. Con su ojo clínico, detecta rápidamente cualquier problema y trabaja arduamente para pulir y mejorar el código del sitio web.
                         </p>
                     </div>
                     <div class="contenedorEquipo">
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/W4SXyBQw/Any-Conv-com-Mesa-de-trabajo-18-copiatablas-ingles.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copiatablas-ingles' class="avatar" loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/W4SXyBQw/Any-Conv-com-Mesa-de-trabajo-18-copiatablas-ingles.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copiatablas-ingles' class="avatar" loading="lazy"/></a>
                         <button class="botonDev">Denisse Mateus</button>                          
                         <p class="parrafoDevs">                           
                         Nuestra diseñadora colombiana, es una experta en el buen gusto y estilo, lo que le permite crear diseños impresionantes y atractivos para el sitio web. Siempre tiene en cuenta la experiencia del usuario y asegura que el aspecto visual del sitio sea lo mejor posible.
                         </p>
                     </div>
                     <div class="contenedorEquipo">
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/52KZYFtV/Any-Conv-com-Mesa-de-trabajo-18-copia-3tablas-ingles.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-3tablas-ingles'class="avatar" loading="lazy"/></a>
+                        <a><img src='https://i.postimg.cc/52KZYFtV/Any-Conv-com-Mesa-de-trabajo-18-copia-3tablas-ingles.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-3tablas-ingles'class="avatar" loading="lazy"/></a>
                         <button class="botonDev">Gabriela Nairac</button>
                         <p class="parrafoDevs">                       
                         Nuestra experta en análisis de datos y marketing uruguaya, es la encargada de la organización y estructura del sitio web. Tiene una visión clara del proyecto y sabe cómo llevarlo a cabo de manera efectiva.
@@ -152,7 +152,7 @@
             <div class="footer1">
                 <h4>FORMAS DE PAGO</h4>
                 <figure>
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
+                    <a><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
                 </figure>
             </div>
         </div>  
