Se le agrego la funcionalidad al slide de fichaproducto

--- a/pages/pasarela.html
+++ b/pages/pasarela.html
@@ -20,7 +20,7 @@
 <body>
 
 <div class="container">
-    <form id="pasarela">
+    <form id="pasarela" action="../pages/pdd.html">
         <a href="../pages/fichaproducto.html" class="botonCierrePasarela">x</a>
         <div class="row">
             <div class="col">
@@ -83,8 +83,8 @@
                 </div>
             </div>    
         </div>        
-        <a href="../pages/pdd.html">
-            <button class="submit-btn" >Aceptar</button>
+        <a>
+            <button class="submit-btn">Aceptar</button>
         </a>    
         <!-- <a href="../pages/pdd.html">
             <button class="submit-btn">Aceptar</button> </a>   -->
