--- a/pages/fichaproducto.html
+++ b/pages/fichaproducto.html
@@ -63,7 +63,7 @@
   </section>
   <script>
     function img(anything) {
-      document.querySelector('.slide').src = anything;
+      document.querySelector('.slideProducto').src = anything;
     }
 
     function change(change) {
