Se añadio nav hamburguesa para 320 y 360

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
                 </a> 
                 <i class="bi bi-list"></i>
             </label>
+            <ul class="nav-menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="pages/pdd.html" >Productos</a></li>
+                <li><a href="pages/carrito.html">Ofertas</a></li>
+                <li><a href="pages/micuenta.html">Mi cuenta</a></li>
+                <li><a href="pages/somos.html">Conocenos</a></li>
+            </ul>
             <form autocomplete="off">
                 <div>
                     <input type="search" name="q" placeholder="Buscar">
