--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -37,6 +37,13 @@
             </a>
                 <i class="bi bi-list"></i>
             </label>
+            <ul class="nav-menu">
+                <li><a href="../index.html" class="active">Home</a></li>
+                <li><a href="pdd.html" >Productos</a></li>
+                <li><a href="carrito.html">Ofertas</a></li>
+                <li><a href="micuenta.html">Mi cuenta</a></li>
+                <li><a href="somos.html">Conocenos</a></li>
+            </ul>
             <form autocomplete="off">
                 <div>
                     <input type="text" name="q" placeholder="Buscar">
