API y funciones de verificacion en formulario

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" type="image/jpg" href="https://i.postimg.cc/zGhXjHxn/FavIcon.png" sizes="15px">
     <!--Descripción del sitio para el SEO-->
     <meta name="description" content="¡Haz tu compra ahora y aprovecha nuestras promociones especiales!"/>
-    <!-- <script src="../app.js" async></script> -->
+    <script src="../app.js" async></script>
     <title>Cosmos I Ofertas del día</title> 
 </head>
 <body>
