--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -76,7 +76,7 @@
                 <form id= "formularioRegistro" action="micuenta.html" method="POST" class="formulario">
                 <input type="text" name="nombre" id="nombre" placeholder="Nombre" required class="input">
                 <input type="text" name="apellido" id="apellido" placeholder="Apellido" required class="input">
-                <input type="email" name="correo" id="correo" placeholder="Correo Electrónico" required class="input">
+                <input type="email" name="correo" id="email" placeholder="Correo Electrónico" required class="input">
                 <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña" required class="input">
                 <input type="password" name="contraseña" id="confirmarContraseña" placeholder="Confirma tu contraseña" required class="input">
                 <p>Estoy de acuerdo con los <a href="#">Términos y Condiciones</a></p>
