Se modifico el responsive de la pagina micuenta y el nav-menu, también se mejoró el aspecto del nav-menu

--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -32,10 +32,17 @@
                     </a>
                         <i class="bi bi-list"></i>
                     </label>
+                    <ul class="nav-menu">
+                        <li><a href="../index.html" class="active">Home</a></li>
+                        <li><a href="pdd.html" >Productos</a></li>
+                        <li><a href="carrito.html">Ofertas</a></li>
+                        <li><a href="micuenta.html">Mi cuenta</a></li>
+                        <li><a href="somos.html">Conócenos</a></li>
+                    </ul>
                     <form autocomplete="off">
-                        <div>
+                        <div class="buscador">
                             <input type="text" name="q" placeholder="Buscar">
-                            <a><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
+                            <a><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA' class="lupa" loading="lazy"/></a>
                         </div>
                     </form>
                     <a href="../index.html" class="enlace">           
@@ -57,7 +64,7 @@
                         </li>                     
                         <li><a href="carrito.html">Ofertas</a></li>    
                         <li><a href="micuenta.html">Mi cuenta</a></li>                    
-                        <li><a href="somos.html">Conocenos</a></li>  
+                        <li><a href="somos.html">Conócenos</a></li>  
                     </ul> 
                         <!--Contenedor de Redes Sociales-->
                     <div class="red">
