--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <li><a href="pages/pdd.html" >Productos</a></li>
                 <li><a href="pages/carrito.html">Ofertas</a></li>
                 <li><a href="pages/micuenta.html">Mi cuenta</a></li>
-                <li><a href="pages/somos.html">Conocenos</a></li>
+                <li><a href="pages/somos.html">Conócenos</a></li>
             </ul>
             <form autocomplete="off">
-                <div>
+                <div class="buscador">
                     <input type="search" name="q" placeholder="Buscar">
                     <a><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
@@ -72,7 +72,7 @@
                 </li>
                 <li><a href="pages/carrito.html">Ofertas</a></li>
                 <li><a href="pages/micuenta.html">Mi cuenta</a></li>
-                <li><a href="pages/somos.html">Conocenos</a></li>
+                <li><a href="pages/somos.html">Conócenos</a></li>
                 
             </ul>
             <!--Contenedor de Redes Sociales-->
