--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -42,10 +42,10 @@
                 <li><a href="pdd.html" >Productos</a></li>
                 <li><a href="carrito.html">Ofertas</a></li>
                 <li><a href="micuenta.html">Mi cuenta</a></li>
-                <li><a href="somos.html">Conocenos</a></li>
+                <li><a href="somos.html">Conócenos</a></li>
             </ul>
             <form autocomplete="off">
-                <div>
+                <div class="buscador">
                     <input type="text" name="q" placeholder="Buscar">
                     <a><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
