--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -69,7 +69,7 @@
                 </li>                     
                 <li><a href="carrito.html">Ofertas</a></li>    
                 <li><a href="micuenta.html">Mi cuenta</a></li>                    
-                <li><a href="somos.html">Conocenos</a></li>  
+                <li><a href="somos.html">Conócenos</a></li>  
             </ul> 
                 <!--Contenedor de Redes Sociales-->
             <div class="red">
