intento por solucionar error 405 de git pages

--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -80,7 +80,7 @@
             <h2>Accede a tu cuenta</h2>
             <section class="contenedorRegistro">
                 <h3>Formulario de Registro</h3>
-                <form id= "formularioRegistro" action="micuenta.html" method="POST" class="formulario">
+                <form id= "formularioRegistro" action="micuenta.html" method="" class="formulario">
                 <input type="text" name="nombre" id="nombre" placeholder="Nombre" required class="input">
                 <input type="text" name="apellido" id="apellido" placeholder="Apellido" required class="input">
                 <input type="email" name="correo" id="email" placeholder="Correo Electrónico" required class="input">
