se agrego boton de cerrar en carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -153,6 +153,7 @@
             <!-- Carrito de Compras -->
             <div class="carrito" id="carrito">
                 <div class="header-carrito">
+                    <a href="carrito.html" class="botonCierreCarrito">x</a>
                     <span class="titulo-carrito">Tu Carrito</span>
                 </div>
 
